--- a/codestrain-server/Cargo.toml
+++ b/codestrain-server/Cargo.toml
@@ -6,7 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dotenvy = "0.15.7"
+dotenvy = "0.15"
 extism = "^1.0.0-rc3"
-rocket = "0.5.0"
-sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "tls-rustls"] }
+rocket = "0.5"
+sqlx = { version = "0.7", features = [
+    "postgres",
+    "runtime-tokio",
+    "tls-rustls",
+] }
