--- a/codestrain-server/Cargo.toml
+++ b/codestrain-server/Cargo.toml
@@ -6,9 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.78"
 dotenvy = "0.15"
 extism = "^1.0.0-rc3"
-rocket = "0.5"
+futures = "0.3.30"
+rocket = { version = "0.5", features = ["json"] }
+rocket_anyhow = "0.1.1"
+rocket_db_pools = { version = "0.1.0", features = ["sqlx_postgres"] }
 sqlx = { version = "0.7", features = [
     "postgres",
     "runtime-tokio",
