--- a/codestrain-server/Cargo.toml
+++ b/codestrain-server/Cargo.toml
@@ -15,7 +15,7 @@ rocket-authorization = "1.0.0"
 rocket_anyhow = "0.1.1"
 rocket_cors = "0.6.0"
 rocket_db_pools = { version = "0.1.0", features = ["sqlx_postgres"] }
-serde_with = "3.4.0"
+serde_with = { version = "3.4.0", features = ["base64"] }
 sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls", "time", "uuid"] }
 thiserror = "1.0"
 time = { version = "0.3.31", features = ["serde-human-readable"] }
