--- a/codestrain-server/Cargo.toml
+++ b/codestrain-server/Cargo.toml
@@ -6,17 +6,22 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.78"
 dotenvy = "0.15"
 extism = "^1.0.0-rc3"
 futures = "0.3.30"
 rocket = { version = "0.5", features = ["json"] }
-rocket-authorization = "1.0.0"
-rocket_anyhow = "0.1.1"
-rocket_cors = "0.6.0"
-rocket_db_pools = { version = "0.1.0", features = ["sqlx_postgres"] }
-serde_with = { version = "3.4.0", features = ["base64"] }
-sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls", "time", "uuid"] }
+rocket-authorization = "1.0"
+rocket_anyhow = "0.1"
+rocket_cors = "0.6"
+rocket_db_pools = { version = "0.1", features = ["sqlx_postgres"] }
+serde_with = { version = "3.4", features = ["base64"] }
+sqlx = { version = "0.7", features = [
+    "postgres",
+    "runtime-tokio",
+    "tls-rustls",
+    "time",
+    "uuid",
+] }
 thiserror = "1.0"
-time = { version = "0.3.31", features = ["serde-human-readable"] }
-uuid = { version = "1.6.1", features = ["serde"] }
+time = { version = "0.3", features = ["serde-human-readable"] }
+uuid = { version = "1.6", features = ["serde"] }
