--- a/codestrain-frontend/package.json
+++ b/codestrain-frontend/package.json
@@ -15,6 +15,7 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
+		"@extism/extism": "1.0.0-rc9",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
