--- a/codestrain-server/Cargo.toml
+++ b/codestrain-server/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+argon2 = "0.5.2"
 codestrain-common = { path = "../codestrain-common" }
 dotenvy = "0.15"
 extism = "^1.0.0-rc3"
