minor improvements, allow up to 5 moves per turn

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ members = [
     "example-strain/pathfinding",
     "example-strain/fill",
     "example-strain/fill-reverse",
+    "example-strain/thefinnishvariant",
 ]
